--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.12.2",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "fontawesome": "^5.6.3",
@@ -23,6 +24,7 @@
     "react-router": "^6.21.0",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
+    "video-react": "^0.16.0",
     "web-vitals": "^2.1.4",
     "zustand": "^4.4.7"
   },
