--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@zegocloud/zego-uikit-prebuilt": "^1.8.15",
     "antd": "^5.12.2",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
@@ -21,8 +21,9 @@
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^4.12.0",
+    "react-player": "^2.14.1",
     "react-router": "^6.21.0",
-    "react-router-dom": "^6.21.0",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "video-react": "^0.16.0",
     "web-vitals": "^2.1.4",
@@ -55,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^14.1.2",
     "gh-pages": "^6.1.0"
   }
 }
