--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fontawesome": "^5.6.3",
     "fortawesome": "^0.0.1-security",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.0.4",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
@@ -26,7 +27,14 @@
     "react-scripts": "5.0.1",
     "video-react": "^0.16.0",
     "web-vitals": "^2.1.4",
-    "zustand": "^4.4.7"
+    "zustand": "^4.4.7",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@iconscout/react-unicons": "^1.1.6",
+    "@mui/material": "^5.6.0",
+    "apexcharts": "^3.35.0",
+    "framer-motion": "^6.2.9",
+    "react-apexcharts": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
