--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^4.12.0",
+    "react-player": "^2.14.1",
     "react-router": "^6.21.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
